<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_digikala" />

    <Button
        android:id="@+id/btn_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/gray400"
        android:paddingHorizontal="20dp"
        android:text="@string/info_digikala_com"
        app:icon="@drawable/ic_mail"
        app:iconGravity="end"
        app:iconPadding="10dp" />

    <Button
        android:id="@+id/btn_contact"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/gray400"
        android:text="@string/contact"
        android:textStyle="bold"
        app:icon="@drawable/ic_baseline_headset_mic_24"
        app:iconGravity="start|end"
        app:iconPadding="10dp" />

    <Button
        android:id="@+id/btn_debug"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_contact"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/red_500"
        android:text="@string/bug"
        android:textSize="15sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_baseline_bug_report_24"
        app:iconGravity="start|end"
        app:iconPadding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/btn_debug"
        android:weightSum="3"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ver"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textAlignment="center"/>

        <ImageView
            android:id="@+id/img_logo2"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:srcCompat="@drawable/dj_logo2"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/txt_dijiKala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dijiKala"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="15sp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_copyRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyRight"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_below="@id/btn_debug"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:padding="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_below="@id/txt_copyRight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/condition"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textColor="@color/blue_500"
            android:padding="10dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/harim"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textColor="@color/blue_500"
            android:padding="10dp"
            android:textStyle="bold"/>


    </LinearLayout>


</RelativeLayout>